[package]
name = "utils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.4.11", features = ["derive", "env"] }
dotenv = "0.15.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.22", features = ["rustls"] }
rust-s3 = { version = "0.33.0", features = ["tokio"] }
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
sha256 = "1.4.0"
tokio = { version = "1.35.0", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
